--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-range": "^1.8.14",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "watch": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
